[package]
name = "tnp-extensions"
version = "0.10.1"
edition = "2021"
authors = ["Adam.S <Bas-Man@users.noreply.github.com>"]
license = "MIT"
description = "Simple set of extensions privided for torrent-name-parser"
repository = "https://github.com/Bas-Man/tnp-extensions"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
torrent-name-parser = "0.10.1"
