[package]
name = "tnp-extensions"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "plex"
path = "examples/plex.rs"
required-features = ["plex"]

[[example]]
name = "jellyfin"
path = "examples/jellyfin.rs"
required-features = ["jellyfin"]

[[example]]
name = "custom"
path = "examples/custom_struct.rs"

[features]
title = ["titlecase"]
plex = ["title"]
jellyfin = ["title"]

[dependencies]
titlecase = { version = "1.1.0", optional = true }
torrent-name-parser = "0.10.0"

[package.metadata.docs.rs]
features = ["plex"]
rustdoc-args = ["--cfg", "docsrs"]
