[package]
name = "tnp-extensions"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "plex"
path = "examples/plex.rs"

[features]

[dependencies]
torrent-name-parser = "0.10.1"

[package.metadata.docs.rs]
features = ["all"]
rustdoc-args = ["--cfg", "docsrs"]
